fixed some stuff with rating
made thge popup look much much better
the stars, fixed the overlapping issue
also fixed issue with user not showing for tables
fixed issue with date trime not showing correctly

--- a/front-end/src/components/DocActions.css
+++ b/front-end/src/components/DocActions.css
@@ -1,6 +1,27 @@
 .star {
     display: inline-block;
-    position: relative;
+    font-size: 30px; 
+    position: relative; /* Add relative positioning to the star container */
+}
+
+.star span {
+    cursor: pointer;
+}
+
+.star .full-star {
+    color: gold;
+}
+
+.star .empty-star {
+    color: lightgray;
+}
+
+.star .half-star .gold-star {
+    overflow: hidden;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 50%;
 }
 
 .RateButton {
